--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -352,6 +352,7 @@
 
     .keyboard {
         right: 10px;
+
         .md-ripple-container {
             display: none;
         }
@@ -384,7 +385,10 @@
     }
 
 
-
+    .flip-container, .flipper {
+        .displayFlex;
+        flex-grow: 1;
+    }
 
     .front, .back {
 
@@ -628,7 +632,7 @@
             }
             //.my-element.ng-hide-add-active,
             &.ng-hide-add {
-                display:block !important;
+                display: block !important;
                 animation-name: cardOut;
                 animation-duration: 0.3s;
                 animation-timing-function: ease-out;
@@ -639,7 +643,7 @@
             }
 
             &.ng-hide-remove {
-                display:block !important;
+                display: block !important;
                 animation-name: cardIn;
                 animation-duration: 0.3s;
                 animation-timing-function: ease-out;
@@ -724,13 +728,18 @@
 
                     .data-wrapper {
                         flex-direction: column;
+                        padding-bottom: 10px;
                     }
 
-                    img {
+                    .img-container img {
                         width: initial;
                         max-width: 100%;
                         margin: 0 auto;
                         display: block;
+
+                        @media(max-width: 600px) {
+                            max-height: @cardHeight/4 - 12px;
+                        }
                     }
                 }
             }
@@ -748,6 +757,10 @@
 
                     @media(max-width: 600px) {
                         max-height: @cardHeight/2;
+
+                        .text-container p {
+                            margin: 0;
+                        }
                     }
                 }
 
@@ -760,7 +773,7 @@
                         width: 100%;
 
                         @media(max-width: 600px) {
-                            padding: 0 25px;
+                            padding: 6px 25px;
                         }
                     }
                 }
@@ -946,6 +959,10 @@
             background: @frontColor;
         }
     }
+}
+
+.keyboard-menu:before {
+    display: none;
 }
 
 .mdno-object-fit .flashcardPage .card-player .card-template .card-content .side .img-container img {
