--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
@@ -113,7 +113,7 @@
                                 <div class="text-container">
                                     <p class="scrollbar" dir="auto" ng-bind="::slide.front.text" fit-text></p>
                                 </div>
-                                <div class="flip" ng-if="f.style !== null">
+                                <div class="flip" ng-if="slide.style !== null">
                                     <md-icon md-svg-icon="b:flip"></md-icon>
                                     @FlashcardResources.InstructionFlip
                                 </div>
@@ -130,7 +130,7 @@
                                 <div class="text-container">
                                     <p class="scrollbar" dir="auto" ng-bind="::slide.cover.text" fit-text></p>
                                 </div>
-                                <div class="flip" ng-if="f.style !== null">
+                                <div class="flip" ng-if="slide.style !== null">
                                     <md-icon md-svg-icon="b:flip"></md-icon>
                                     @FlashcardResources.InstructionFlip
                                 </div>
