--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/_LayoutPage.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/_LayoutPage.cshtml
@@ -15,7 +15,7 @@
        }
    </script>
    <![endif]-->
-<html dir="@(System.Threading.Thread.CurrentThread.CurrentUICulture.TextInfo.IsRightToLeft ? "rtl" : "ltr")" lang="@System.Threading.Thread.CurrentThread.CurrentUICulture.TwoLetterISOLanguageName" @*ng-app="app"*@ @*ng-strict-di*@>
+<html dir="@(System.Threading.Thread.CurrentThread.CurrentUICulture.TextInfo.IsRightToLeft ? "rtl" : "ltr")" lang="@System.Threading.Thread.CurrentThread.CurrentUICulture.TwoLetterISOLanguageName" class="expanded-chat" @*ng-app="app"*@ @*ng-strict-di*@>
 
 <head>
     <style>
