--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -20,8 +20,8 @@
 .cardNextInAnimation() {
     from {
         opacity: 0;
-         transform: translate(70%, 85%) rotate(45deg);
-       // transform: rotate(-45deg) translate(-80%,-45%);
+        transform: translate(70%, 85%) rotate(45deg);
+        // transform: rotate(-45deg) translate(-80%,-45%);
     }
 
     to {
@@ -46,7 +46,7 @@
 .cardPrevInAnimation() {
     from {
         opacity: 0;
-         //transform: translate(70%, 85%) rotate(45deg);
+        //transform: translate(70%, 85%) rotate(45deg);
         transform: rotate(-45deg) translate(-80%,-45%);
     }
 
@@ -792,6 +792,10 @@
                         padding-bottom: 10px;
                     }
 
+                    .img-container ~ .text-container {
+                        padding-top: 25px;
+                    }
+
                     .img-container img {
                         width: initial;
                         max-width: 100%;
@@ -914,7 +918,7 @@
                         height: 100%;
                         width: 50%;
                         flex-grow: 1;
-                        padding: 25px;
+                        padding: 40px 25px 30px 25px;
 
                         @media(max-width: 600px) {
                             width: 100%;
@@ -1022,8 +1026,15 @@
     }
 }
 
-.keyboard-menu:before {
-    display: none;
+.keyboard-menu {
+    &:before {
+        display: none;
+    }
+
+    md-menu-item {
+        min-height: 30px;
+        height: 36px;
+    }
 }
 
 .mdno-object-fit .flashcardPage .card-player .card-template .card-content .side .img-container img {
