Some bug fixes.

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.css
@@ -266,7 +266,7 @@
   text-transform: lowercase;
 }
 .capitalize {
-  text-transform: capitalize;
+  text-transform: capitalize !important;
 }
 .upper-case {
   text-transform: uppercase;
