--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.less
@@ -66,7 +66,7 @@
 }
 
 .capitalize {
-    text-transform: capitalize;
+    text-transform: capitalize !important; //override angular material
 }
 
 .upper-case {
