--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -655,7 +655,8 @@ md-menu-item {
         position: fixed;
         right: ~"calc(50% - 650px)";
         top: @heightOfHeader + @actionsNavHeight + 5;
-
+        width:160px;
+        height:600px;
         @media(max-width: 1279px) {
             display: none;
         }
@@ -664,6 +665,8 @@ md-menu-item {
     .ad {
         text-align: center;
         display: inline;
+        width:970px;
+        height:300px;
     }
 
     .hideActions {
